boulder/boulder/tests/compile_fail/scope/break_fn.bo
# `break` outside of scope
# (5:

fn break_fn() -> u32 {
    break 7;
    4
}